--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-document-summarizer-(powered-by-gemini)",
+  "name": "local-&-private-ai-document-summarizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "@google/genai": "latest"
+    "@xenova/transformers": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
